--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -1,8 +1,12 @@
 $color-light: #fff;
-$color-dark: #222f3e;
-$color-background: #c8d6e5;
-$color-primary: #ff9f43;
-$color-secondary: #218c74;
+$color-dark: #292A33;
+$color-background: #F8F7F2;
+
+$color-decorator: #37383F;
+
+
+$color-primary: #CAA262;
+$color-secondary: #B4C3B6;
 
 
 $font-header: 'Montserrat', sans-serif;
