Add standard trip price below special price

--- a/src/components/common/ListItem/ListItem.scss
+++ b/src/components/common/ListItem/ListItem.scss
@@ -3,3 +3,10 @@
 .component {
   margin-bottom: $base-size;
 }
+
+small {
+  padding-left: 44px;
+  color: darken($color-light, 50%);
+  font-size: 0.75em;
+  font-weight: bolder;
+}
