--- a/src/components/common/Button/Button.scss
+++ b/src/components/common/Button/Button.scss
@@ -25,4 +25,13 @@
       background: darken($color-primary, 5%);
     }
   }
+
+  &:disabled {
+    cursor: not-allowed;
+    opacity: 0.3;
+
+    &:hover {
+      transform: scale(1);
+    }
+  }
 }
