--- a/src/components/features/TripSummary/TripSummary.scss
+++ b/src/components/features/TripSummary/TripSummary.scss
@@ -42,6 +42,16 @@
   font-weight: 700;
   span {
     display: block;
+    line-height: 1.3;
+  }
+  strong {
+    font-weight: 900;
+    color: $color-primary;
+    font-size: 1.1em;
+
+  }
+  small {
+    padding-left: 0;
   }
 }
 
